--- a/app/src/main/res/layout/item_android_version.xml
+++ b/app/src/main/res/layout/item_android_version.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="1dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/tv_name"
