--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
+            <!--4 dong include thể hiện cho 4 item trong RecyclerView đang được load data-->
             <include layout="@layout/data_placeholder_layout" />
 
             <include layout="@layout/data_placeholder_layout" />
